--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,4 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = [
-    "numpy>=2.4.0",
-    "opencv-python>=4.13.0.90",
-]
-
-[dependency-groups]
-dev = [
-    "ipykernel>=7.1.0",
-    "uv>=0.9.21",
-]
+dependencies = ["numpy>=2.4.0", "opencv-python>=4.13.0.90"]
