--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = ["numpy>=2.4.0", "opencv-python>=4.13.0.90"]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.14.14",
+    "uv>=0.9.28",
+]
+
